# CS2610VideoCode

./: .gitignore
module1/lesson2/: client.py  http_protocol.txt  http_server.py  server.py
module1/lesson3/: higher_order_functions.py  my_module.py  my_script.py
module1/lesson4/: about.html  data.json  index.html
module1/lesson5/: middleware.py
module2/lesson1/django_example/: pyproject.toml
module2/lesson1/django_example/myproject/myapp/: views.py
module2/lesson1/django_example/myproject/myapp/static/myapp/: script.js  style.css
module2/lesson1/django_example/myproject/myapp/templates/myapp/: index.html
module2/lesson1/django_example/myproject/myproject/: settings.py  urls.py
module2/lesson3/todos_demo/: pyproject.toml
module2/lesson3/todos_demo/todos/: db.sqlite3
module2/lesson3/todos_demo/todos/core/: models.py  urls.py  views.py
module2/lesson3/todos_demo/todos/core/migrations/: 0001_initial.py
module2/lesson3/todos_demo/todos/core/static/core/: index.js
module2/lesson3/todos_demo/todos/core/templates/core/: index.html
module2/lesson3/todos_demo/todos/todos/: asgi.py  settings.py  urls.py  wsgi.py
module2/lesson5/: setup.py
module3/lesson1/: create_account.py  hash_password.py  login.py
module3/lesson2/cookies_demo/: pyproject.toml
module3/lesson2/cookies_demo/cookies_demo/: manage.py
module3/lesson2/cookies_demo/cookies_demo/cookies_demo/: asgi.py  settings.py  urls.py  wsgi.py
module3/lesson2/cookies_demo/cookies_demo/core/: views.py
module3/lesson4/middleware_example/: pyproject.toml
module3/lesson4/middleware_example/middleware_example/: manage.py
module3/lesson4/middleware_example/middleware_example/core/: middleware.py  urls.py  views.py
module3/lesson4/middleware_example/middleware_example/middleware_example/: asgi.py  settings.py  urls.py  wsgi.py
module3/lesson5/full_django/: pyproject.toml
module3/lesson5/full_django/full_django/: db.sqlite3  manage.py
module3/lesson5/full_django/full_django/_full_django/: asgi.py  settings.py  urls.py  wsgi.py
module3/lesson5/full_django/full_django/core/: models.py  urls.py  views.py
module3/lesson5/full_django/full_django/core/migrations/: 0001_initial.py
module3/lesson5/full_django/full_django/registration/: urls.py  views.py
module3/lesson5/full_django/full_django/registration/templates/registration/: base.html
module5/lesson2/custom-variables/: .env.example  pyproject.toml  test.py
(+90 files in other folders)
